--- a/quick/index.html
+++ b/quick/index.html
@@ -143,7 +143,7 @@
                     <h3><strong>Good</strong> design is finding that perfect balance between the way something looks and how it functions.</h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a href="#" class="btn btn-lg btn-primary btn-cta">Let's find it</a>
+                    <a href="#" class="btn btn-lg btn-cta">Let's find it</a>
                 </div>
             </div>
         </div>
@@ -228,7 +228,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <a href="#" class="btn btn-lg btn-primary btn-cta-o">Hire us Now</a>
+                    <a href="#" class="btn btn-lg btn-cta-o">Hire us Now</a>
                 </div>
             </div>
         </div>
@@ -323,117 +323,117 @@
             </div>
 
             <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-1.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
                 </div>
 
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-2.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
                 </div>
 
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-3.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
                 </div>
 
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-4.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
-            </div>
+                </div>
 
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-5.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
                 </div>
 
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-6.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
                 </div>
 
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-7.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
-            </div>
+                </div>
 
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-8.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
                     </div>
-                    </div>
+                </div>
 
-                    <div class="col-sm-6 col-md-4">
-                       <div class="portfolio-col">
+                <div class="col-sm-6 col-md-4">
+                    <div class="portfolio-col">
                         <div class="item-imag-wrap">
                             <img src="img/work-9.png" alt="" class="img-responsive">
-                        <div class="item-img-overlay">
-                            <span></span>
-                        </div>
+                            <div class="item-img-overlay">
+                                <span></span>
+                            </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
                         <p>wordpress/HTML5</p>
@@ -525,14 +525,14 @@
                         <div class="item-img-wrap">
                             <img src="img/work-6.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                            <span></span>
+                                <span></span>
                             </div>
                         </div>
-                    <h3><a href="#">Blog post title</a></h3>
-                    <span>27 August 2014</span>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                    <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
-                    </p>
+                        <h3><a href="#">Blog post title</a></h3>
+                        <span>27 August 2014</span>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                        <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
+                        </p>
                     </div>
                 </div>
 
@@ -541,14 +541,14 @@
                         <div class="item-img-wrap">
                             <img src="img/work-5.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                        <span></span>
+                                <span></span>
                             </div>
                         </div>
-                    <h3><a href="#">Blog post title</a></h3>
-                    <span>27 August 2014</span>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                    <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
-                    </p>
+                        <h3><a href="#">Blog post title</a></h3>
+                        <span>27 August 2014</span>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                        <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
+                        </p>
                     </div>
                 </div>
 
@@ -557,14 +557,14 @@
                         <div class="item-img-wrap">
                             <img src="img/work-4.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                            <span></span>
+                                <span></span>
                             </div>
                         </div>
-                            <h3><a href="#">Blog post title</a></h3>
-                            <span>27 August 2014</span>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                    <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
-                    </p>
+                        <h3><a href="#">Blog post title</a></h3>
+                        <span>27 August 2014</span>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                        <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
+                        </p>
                     </div>
                 </div>
 
@@ -574,14 +574,14 @@
                         <div class="item-img-wrap">
                             <img src="img/work-3.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                            <span></span>
+                                <span></span>
                             </div>
                         </div>
-                            <h3><a href="#">Blog post title</a></h3>
-                            <span>27 August 2014</span>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                            <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
-                            </p>
+                        <h3><a href="#">Blog post title</a></h3>
+                        <span>27 August 2014</span>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                        <p class="text-right"><a href="#" class="btn btn-xs">Read More</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -593,7 +593,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <div class="color-reverse">
-                        <a href="#" class="btn btn-lg btn-primary btn-cta-o">Read all blog posts</a>
+                        <a href="#" class="btn btn-lg btn-cta-o">Read all blog posts</a>
                     </div>
                 </div>
             </div>
@@ -622,23 +622,23 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <label>Name *</label>
-                                <input type="text" class="form-control placeholder=" Name "">
+                                <input type="text" class="form-control" placeholder="Name">
                             </div>
 
                             <div class="col-sm-6">
                                 <label>Email Address *</label>
-                                <input type="email" class="form-control placeholder=" Email "">
+                                <input type="email" class="form-control" placeholder="Email">
                             </div>
                         </div>
 
                         <label>Phone Number *</label>
-                        <input type="tel" class="form-control placeholder=" Phone Number "">
+                        <input type="tel" class="form-control" placeholder="Phone Number">
 
                         <label>Message<span>*</span>
                         </label>
-                        <textarea rows="5" class="form-control placeholder=" Message ""></textarea>
+                        <textarea rows="5" class="form-control" placeholder="Message"></textarea>
 
-                        <button type="submit" class="btn-cta">Send Message</button>
+                        <button type="submit" class="btn btn-xs btn-cta">Send Message</button>
                     </form>
                 </div>
 
@@ -673,18 +673,26 @@
     </section>
     <!--contact section end-->
 
-    <section id="footer" class="section-padding color-reverse">
+    <section id="footer" class="section-padding">
         <div class="container">
-                <div class="row">
-                   <div class="col-sm-12 text-center"> 
+            <div class="row">
+                <div class="col-sm-12 text-center">
                     <ul class="list-inline">
-                            <li><a href="#">Terms of use</a></li>   
-                            <li><a href="#">Privacy and policy</a></li>
+                        <li>
+                            <a href="#" class="color-reverse">
+                                Terms of use
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="color-reverse">
+                                Privacy and policy
+                            </a>
+                        </li>
                     </ul>
-                            <div>Copyright &copy; 2016. Quick.</div>
-                           </div>
-                        </div>
-                    </div>
+                    <div class="color-reverse">Copyright &copy; 2016. Quick.</div>
+                </div>
+            </div>
+        </div>
     </section>
     <!--footer section end-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
