--- a/quick/index.html
+++ b/quick/index.html
@@ -9,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
+    <link href='css/owl.carousel.css' rel='stylesheet' type='text/css'>
 
     <title>Quick</title>
 </head>
@@ -34,7 +35,7 @@
                                 </li>
                             </ul>
                         </div>
-                        
+
                         <p><a href="#" class="btn btn-lg btn-dark">More Detail</a>
                         </p>
                     </div>
@@ -220,25 +221,30 @@
                 <div class="col-sm-8 col-sm-offset-2 text-center">
                     <div class="section-heading color-reverse">
                         <h2>Testimonials</h2>
-
-                        <div class="row">
-                            <span class="icon"><i class="fa fa-quote-left"></i></span>
-                        </div>
-                        <div id="testi-carousel" class="owl-carousel">
-                            <div>
-                                <p class="lead color-reverse">
-                                    <i class="fa fa-quote-left fa-2x"></i> Immediately received personal feedback from the creator of the theme. Incredibly fast, incredibly good. Great service!</p>
-                            </div>
-                        </div>
-                        <p class="author">-Michael CC</p>
+                        <span class="icon"><i class="fa fa-quote-left"></i></span>
                     </div>
-                    <div>
-                        <p class="lead color-reverse"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia.</p>
-                        <p class="author">-Rakesh sharma</p>
-                    </div>
-                    <div>
-                        <p class="lead color-reverse"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia.</p>
-                        <p class="author">-Rakesh sharma</p>
+                    <div class="owl-carousel" id="testi-carousel">
+                        <div>
+                            <p class="lead color-reverse"><i class=
+                            "fa fa-quote-left fa-2x"></i> Immediately received personal
+                            feedback from the creator of the theme. Incredibly fast, incredibly
+                            good. Great service!</p>
+                            <p class="author">-Michael CC</p>
+                        </div>
+                        <div>
+                            <p class="lead color-reverse"><i class="fa fa-quote-left"></i>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+                            pellentesque neque eget diam posuere porta. Quisque ut nulla at
+                            nunc vehicula lacinia.</p>
+                            <p class="author">-Rakesh sharma</p>
+                        </div>
+                        <div>
+                            <p class="lead color-reverse"><i class="fa fa-quote-left"></i>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+                            pellentesque neque eget diam posuere porta. Quisque ut nulla at
+                            nunc vehicula lacinia.</p>
+                            <p class="author">-Rakesh sharma</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -350,7 +356,9 @@
                         <div class="item-imag-wrap">
                             <img src="img/work-1.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                                <span></span>
+                                <a href="img/work-1.png" class="show-image">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
@@ -363,7 +371,9 @@
                         <div class="item-imag-wrap">
                             <img src="img/work-2.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                                <span></span>
+                                <a href="img/work-1.png" class="show-image">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
@@ -376,7 +386,9 @@
                         <div class="item-imag-wrap">
                             <img src="img/work-3.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                                <span></span>
+                                <a href="img/work-1.png" class="show-image">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
@@ -389,7 +401,9 @@
                         <div class="item-imag-wrap">
                             <img src="img/work-4.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                                <span></span>
+                                <a href="img/work-1.png" class="show-image">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
@@ -402,7 +416,9 @@
                         <div class="item-imag-wrap">
                             <img src="img/work-5.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                                <span></span>
+                                <a href="img/work-1.png" class="show-image">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
@@ -415,7 +431,9 @@
                         <div class="item-imag-wrap">
                             <img src="img/work-6.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                                <span></span>
+                                <a href="img/work-1.png" class="show-image">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
@@ -441,7 +459,9 @@
                         <div class="item-imag-wrap">
                             <img src="img/work-8.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                                <span></span>
+                                <a href="img/work-1.png" class="show-image">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
@@ -454,7 +474,9 @@
                         <div class="item-imag-wrap">
                             <img src="img/work-9.png" alt="" class="img-responsive">
                             <div class="item-img-overlay">
-                                <span></span>
+                                <a href="img/work-1.png" class="show-image">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                         <h3><a href="#">Project title</a></h3>
@@ -726,7 +748,8 @@
     <script src="js/jquery.flexslider.js" type="text/javascript"></script>
     <script src="js/owl.carousel.js" type="text/javascript"></script>
     <script src="js/jquery.waypoints.js" type="text/javascript"></script>
-<script src="js/jquery.counterup.js" type="text/javascript"></script>
+    <script src="js/jquery.counterup.js" type="text/javascript"></script>
+    <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
 </body>
 
